--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "0.9.5",
+    "react-scripts": "^5.0.1",
     "typewriter-effect": "^2.19.0"
   },
   "scripts": {
